changed connection string

--- a/MeetUpApi/appsettings.Development.json
+++ b/MeetUpApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection" : "Data Source = app.db"
+    "DefaultConnection" : "User ID=postgres;Password=password;Host=localhost;Port=5432;Database=meetupdb;Pooling=true;"
   },
   "TokenKey": "qwe123we123123jqk123lj12lwe",
   "Logging": {
